--- a/Puzzles.Console/PuzzlesConsole.csproj
+++ b/Puzzles.Console/PuzzlesConsole.csproj
@@ -11,6 +11,9 @@
 		<None Update="Day1\input.txt">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="Day2\input.txt">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
 
 	<ItemGroup>
